- Reimplemented the architecture of libamivideo - Implemented correction of aspect ratios - Implemented super hires resolution support - Documented common use-cases in README

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 lib_LTLIBRARIES = libamivideo.la
-pkginclude_HEADERS = amivideotypes.h viewportmode.h bitplane.h palette.h
+pkginclude_HEADERS = amivideotypes.h viewportmode.h palette.h screen.h
 
-libamivideo_la_SOURCES = viewportmode.c bitplane.c palette.c
+libamivideo_la_SOURCES = viewportmode.c palette.c screen.c
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libamivideo.pc
